# scribetwin

./: .gitignore  README.md  pyproject.toml  start.sh
blogs/: final_blog.md
cache/: llm_sim_37d5d9c20796046b5326ae805dea0033.json  llm_sim_62da3867768d99429bbb1733c303ebfe.json  rss_1841c6322aa01bbf1dd0785c2609587f.json
src/: agents.py  app.py  config.py  embedding_model.py  llm_services.py  multimodal_model.py  rss_fetcher.py  style_analysis.py  style_embedder.py  style_llm.py  style_pipeline.py  utils.py
static/: index.html  script.js  styles.css
